umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_222-octane.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 22
bond_count: 23
sum_formula: C8H14
graph6: UqO_gY?_A?C?G?C?A??O?A??C??C??C??@???O??
