umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_avezac.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 79
bond_count: 84
sum_formula: C24H48CaO6
graph6: ~?@NhG___OOG?_A?G?GO???@??C??G?@G??C??A??@???G??@???A???C???A?C????????C????G????G????c????@?????O????C?????O????@?????@?????@??????O?_????????????G??????G??????C??????H???????G??????@???????G???????O???????_???????O???????G???????@?A?????????????????G????????C????????@????????@G?????????_????????A?????????G?????????G?????????G?????????A??????????_?????????A?C?????????????????????C??????????@???????????G??????????C_??????????@???????????A???????????C???????????A???????????@????????????G???????????@????????????A??
