umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_buehl.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 80
bond_count: 84
sum_formula: C24H48N8
graph6: ~?@O????@?G?_O?C?A??_A??_G?CC?C?@??@?O??_C?A??A?G?GA???O?O@????G?C?A?G??@???_C??OC?C???????@?????O@?????A?????A?????@??????O?????A??????G??????O??????O??????G??????A???????O??????@???????A???????A???????@????????O???????A????????G????????O????????O????????G????????A?????G?????????_????????@?????????@??????????_?????????G?????????@??????????C??????????G??????????G??????????C??????????@???????????G???????????_??????????@???????????@????????????_???????????G???????????@????????????C????????????G????????????G????????????C????????
