umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_cyclohexane_brcl.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 18
bond_count: 18
sum_formula: C6H8Br2Cl2
graph6: QhEKC@?O@?C?C?C?@??O?@??C??
