umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_cyocth.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 33
bond_count: 48
sum_formula: C16H16Th
graph6: "`hCGKE?O@?A?A?@??O?A?~o???G??W??S??H??AG??O_?@@??B@??@????O???A????G????O????O????G????A?"
