umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_diamantane.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 34
bond_count: 38
sum_formula: C14H20
graph6: "a_LR?OC?`?A?@??_??????????W_@P?@_??O??A??@???A???A???@????OA?@??????C????O??A??O?G??????@?????O"
