umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_dthcud.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 13
bond_count: 14
sum_formula: C8CuS4
graph6: LiaC?oG@?G?O?a
